2024CR598	6/8/2024	MikeR	Feature	Change all default logos for admin pages to new logo

--- a/src/main/webapp/skin/default/template.xhtml
+++ b/src/main/webapp/skin/default/template.xhtml
@@ -74,7 +74,7 @@
             <h:panelGrid columns="3" cellpadding="3" columnClasses="hdrleft,hdrmid,hdrright" style="width:700px;margin-left: auto;margin-right: auto; border-bottom: 1px solid #c0c0c0">
 
                 <h:outputLink value="/td/index.xhtml">
-                <h:graphicImage library="images" name="logox50.png"/>
+                <h:graphicImage library="images" name="hra-two-color-tagline-logo-trans-166.png"/>
                 </h:outputLink>
 
                 <h:panelGroup></h:panelGroup>
