--- a/src/main/webapp/misc/error/index.html
+++ b/src/main/webapp/misc/error/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 	<script type="text/javascript">
-	    location.href="/ts/";
+	    location.href="/td/";
 	</script>
 </body>
 </html>
